<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_confirmation_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_button"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/noButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_button"
                android:layout_margin="8dp"/>
        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>